# my-ai-agent

./: .gitignore  CMakeLists.txt  README.md  build.ps1  config.json  start.ps1
data/documents/: about_me.md  commands.md  dialog_examples.md  projects.md  skills.md  study.md  test_log.md
docs/: LEARNING_PLAN.md  MY_JARVIS.md  WEEKLY_PLAN.md  WINDOWS11_CONSOLE.md  db_schema.md
include/jarvis/: agent.hpp  config.hpp  database.hpp  encoding.hpp  ollama.hpp  rag.hpp  tools.hpp  utils.hpp
src/: agent.cpp  config.cpp  database.cpp  encoding.cpp  main.cpp  ollama.cpp  rag.cpp  tools.cpp  utils.cpp
